--- a/shared/latex/reinforcement-learning/reinforcement-learning.yml
+++ b/shared/latex/reinforcement-learning/reinforcement-learning.yml
@@ -11,6 +11,6 @@ flavors:
     - intro
     - deep
     - alphago
-    - questions
+    - /questions
 title: Apprentissage par renforcement
 version: 3
