--- a/shared/latex/machine-learning/machine-learning.yml
+++ b/shared/latex/machine-learning/machine-learning.yml
@@ -42,6 +42,11 @@ flavors:
     - apprentissage
     - bonnes-pratiques
     - /questions
+  intro-sans-questions:
+    - intro
+    - evaluation
+    - apprentissage
+    - bonnes-pratiques
   ml5j:
     - intro
     - math-objectifs
