--- a/shared/latex/tools/tools.yml
+++ b/shared/latex/tools/tools.yml
@@ -50,6 +50,7 @@ flavors:
     - environment
     - engineering
     - big-data
+    - apis
     - information
 title: Principaux outils
 version: 3
