Fix a few things for IAO
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/iao/targets.yml
+++ b/orsys/iao/targets.yml
@@ -19,7 +19,7 @@
     - questions-discussion
 
     - path: reinforcement-learning
-      flavor: deepalpha
+      flavor: all
     - questions-discussion
 
     - path: engineering
