--- a/shared/latex/tf-keras-intro/tf-keras-intro.yml
+++ b/shared/latex/tf-keras-intro/tf-keras-intro.yml
@@ -12,7 +12,7 @@ flavors:
   keras-pur:
     - keras-intro: Principes \& API
     - /questions
-    - neural-networks/tp-nn: Travaux Pratiques
+    - /neural-networks/tp-nn: Travaux Pratiques
   tf-pur:
     - tf-intro: null
     - tf-reg-lin: null
