Split IAO into 2 days
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/iao/targets.yml
+++ b/orsys/iao/targets.yml
@@ -1,5 +1,5 @@
-- name: all
-  title: Support de cours
+- name: j1
+  title: Jour 1 --- Techniques du Machine Learning
   sections:
     - path: about
       title: Intelligence Artificielle, enjeux et outils
@@ -22,6 +22,9 @@
       flavor: all
     - questions-discussion
 
+- name: j2
+  title: Jour 2 --- Applications et ingénierie du Machine Learning
+  sections:
     - path: engineering
       flavor: all
     - questions-discussion
