Add unsupervised to IAO slides
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/iao/targets.yml
+++ b/orsys/iao/targets.yml
@@ -18,6 +18,10 @@
       flavor: deep-discover-demo
     - questions-discussion
 
+    - path: unsupervised
+      flavor: iao
+    - questions-discussion
+
     - path: reinforcement-learning
       flavor: all
     - questions-discussion
