--- a/shared/latex/unsupervised/unsupervised.yml
+++ b/shared/latex/unsupervised/unsupervised.yml
@@ -55,6 +55,17 @@ flavors:
     - /questions
     - tp-dim-reduce
     - tp-clustering
+  iao:
+    - introduction
+    - dimensionality-reduction
+    - pca-lda
+    - demo-dim-reduce
+    - kmeans-gaussian
+    - demo-clustering
+    - anomaly-detection-light
+    - demo-anomaly-detect
+    - tp-dim-reduce: Travaux Pratiques
+    - tp-clustering: null
   natixis:
     - introduction
     - dimensionality-reduction
