Add Natixis d4 fixes
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/sequential-data/sequential-data.yml
+++ b/shared/latex/sequential-data/sequential-data.yml
@@ -3,7 +3,7 @@ default_titles:
   markov-model: Modèles de Markov
   sequential-data: Introduction
   sequential-models: Modèles Séquentiels
-  neural-networks/rnn: Réseaux de neurones récurrents
+  statistical-approaches: Approches statistiques
 flavors:
   all:
     - sequential-data
@@ -16,6 +16,13 @@ flavors:
     - markov-model
     - hmm
     - /questions
+  full-with-stats:
+    - sequential-data
+    - sequential-models
+    - markov-model
+    - hmm
+    - statistical-approaches
+    - /questions
   intro:
     - sequential-data
     - sequential-models
@@ -24,11 +31,5 @@ flavors:
     - sequential-data
     - sequential-models
     - markov-model
-  with_rnn:
-    - sequential-data
-    - sequential-models
-    - markov-model
-    - hmm
-    - /neural-networks/rnn
 title: Données séquentielles
 version: 3
