--- a/orsys/INTRA/natixis/targets.yml
+++ b/orsys/INTRA/natixis/targets.yml
@@ -27,18 +27,12 @@
     - path: sequential-data
       flavor: light
     - questions
+
 - name: j4
   title: Jour 4 --- Réseaux de neurones \& séries temporelles
   sections:
-    - title: Réseaux de Neurones
-      path: neural-networks
-      flavor: deep-discover
+    - path: sequential-data
+      flavor: full-with-stats
 
-    - path: natural-language-processing
-      flavor: intro-tp
-
-    - path: engineering
-      flavor: all
-
-    - path: big-questions
+    - path: neural-networks
       flavor: full
