Update a few sections & final Natixis version
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/natixis/targets.yml
+++ b/orsys/INTRA/natixis/targets.yml
@@ -8,7 +8,7 @@
       flavor: init-python
     - questions
     - path: machine-learning
-      flavor: ml5j
+      flavor: natixis
     - questions
 
 - name: j2
