Rework about section, descriptions go to their own deck
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/eni/ml-5J/targets.yml
+++ b/eni/ml-5J/targets.yml
@@ -2,8 +2,7 @@
   title: Jour 1 --- Introduction au Machine Learning
   sections:
     - path: about
-      title: "A propos de votre formation"
-      flavor: ml5j
+      flavor: eni-5j
 
     - path: machine-learning
       flavor: ml5j
