--- a/sparks-formation/ml-python-3j/targets.yml
+++ b/sparks-formation/ml-python-3j/targets.yml
@@ -3,10 +3,12 @@
   sections:
     - path: about
       title: Machine Learning orienté Python
-      flavor: ml-python
+      flavor: sparks-formation-3j
+
     - path: tools
       flavor: init-python
     - questions
+
     - path: machine-learning
       flavor: full
     - questions
@@ -16,6 +18,7 @@
   sections:
     - path: unsupervised
       flavor: dimreduce
+
     - path: supervised
       flavor: standard
 
