Some tweaks for BDA
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/natixis/targets.yml
+++ b/orsys/INTRA/natixis/targets.yml
@@ -22,7 +22,7 @@
   title: Jour 3 --- Apprentissage non supervisé
   sections:
     - path: unsupervised
-      flavor: natixis
+      flavor: bda
     - questions
     - path: sequential-data
       flavor: light
