Correct day 4 title for BDA
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/bda/targets.yml
+++ b/orsys/bda/targets.yml
@@ -28,7 +28,7 @@
     - questions
 
 - name: j4
-  title: Jour 4 --- Ingénierie
+  title: Jour 4 --- Ingénierie \& Traitement de texte
   sections:
     - path: engineering
       flavor: mlcraftmyass
