minor change supervised.yml. proposition programme sparks

--- a/shared/latex/supervised/supervised.yml
+++ b/shared/latex/supervised/supervised.yml
@@ -62,9 +62,11 @@ flavors:
   bayes:
     - naive-bayes
     - gaussian-mixture
+    - modeles-graphiques
+    - sequential-data
+    - sequential-models
     - markov-model
     - hmm
-    - modeles-graphiques
   standard:
     - proba-rappel
     - naive-bayes
