--- a/sparks-formation/ml-python-3j/targets.yml
+++ b/sparks-formation/ml-python-3j/targets.yml
@@ -7,11 +7,9 @@
 
     - path: tools
       flavor: init-python
-    - questions
 
     - path: machine-learning
       flavor: full
-    - questions
 
 - name: j2
   title: Jour 2 --- Algorithmes 1/2
@@ -34,7 +32,7 @@
 
     - title: TensorFlow et Deep Learning
       path: tf-keras
-      flavor: all
+      flavor: full
 
     - title: Réseau de Neurones
       path: neural-networks
