--- a/templates/yml/user-config.yml
+++ b/templates/yml/user-config.yml
@@ -3,3 +3,5 @@ trainer_email: john@doe.me
 trainer_activity: Freelance ML Consulting
 trainer_specialization: NLP, NLU
 trainer_training: MSc in ML
+trainer_phone: +33~X~XX~XX~XX~XX
+trainer: john
