Clean Sparks config and Langage Python mini-deck
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/company-config.yml
+++ b/sparks-formation/company-config.yml
@@ -1,4 +1,4 @@
 company_name: Sparks Formation
-company_logo: sparks-formation-logo
-company_logo_height: 2cm
+company_logo: logo-sparks-formation
+company_logo_height: 1cm
 company_website: https://www.sparks-formation.com/
