--- a/orsys/INTRA/2021-01-geneve/targets.yml
+++ b/orsys/INTRA/2021-01-geneve/targets.yml
@@ -1,5 +1,5 @@
 - name: j1
-  title: Jour 1 --- Réduction de dimensionnalité \& Deep Learning
+  title: Support de cours
   sections:
     - path: about
       title: Machine Learning, Méthodes et Solutions
@@ -13,19 +13,18 @@
       path: tf-keras
       flavor: full
 
-    - title: Réseau de Neurones
-      path: neural-networks
-      flavor: tp-nn-keras
-
     - title: Réseaux de Convolutions
       path: neural-networks
-      flavor: cnn
+      flavor: cnn-no-gan
 
-- name: j2
-  title: Jour 2 --- Ingénierie
-  sections:
+    - title: Git
+      path: tools
+      flavor: git
+
     - path: tools
-      flavor: in-depth
+      flavor: detailed
 
     - path: engineering
-      flavor: mlcraftmyass
+      flavor: deploying
+
+    - contact
