--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ Pygments = "^2.6.1"
 python = "^3.6"
 deckz = "^10.2.0"
 
+
+[tool.poetry.dev-dependencies]
+black = {version = "^20.8b1", allow-prereleases = true}
 [build-system]
 build-backend = "poetry.masonry.api"
 requires = ["poetry>=0.12"]
