--- a/sparks-formation/company-config.yml
+++ b/sparks-formation/company-config.yml
@@ -1,4 +1,4 @@
 company_name: Sparks Formation
-company_logo: logo-sparks-formation
+company_logo: logos/sparks-formation
 company_logo_height: 1cm
 company_website: https://www.sparks-formation.com/
