Use new deckz and correct faulty sections
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,6 @@
 build_command:
   - latexmk
-  - -pdflatex=xelatex -shell-escape -interaction=nonstopmode %O %S
+  - -pdflatex=xelatex -shell-escape -halt-on-error %O %S
   - -dvi-
   - -ps-
   - -pdf
