--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ deckz = "^10.3.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^20.8b1", allow-prereleases = true}
+flake8 = "^3.8.4"
 [build-system]
 build-backend = "poetry.masonry.api"
 requires = ["poetry>=0.12"]
