Fix DeepMind energy consumption reduction caption
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/img/deepmind-energy-consumption.yml
+++ b/shared/img/deepmind-energy-consumption.yml
@@ -1,3 +1,3 @@
 author: R. Evans \& J. Gao
 license: blog de DeepMind
-title: DeepMind AI Reduces Google Data Centre Cooling Bill by 40%
+title: DeepMind AI Reduces Google Data Centre Cooling Bill by 40\%
