--- a/shared/latex/python/python.yml
+++ b/shared/latex/python/python.yml
@@ -1,8 +1,66 @@
 default_titles:
+  context-managers: Gestionnaires de contexte
+  decorators: Décorateurs
+  deployment: Déploiement
+  environment: Gestion de l'environment logiciel
+  generators: Générateurs
   intro: Introduction
+  metaclasses: Méta-classes
+  packaging: Création de paquets Python
+  pytest: \texttt{pytest}
+  quizz: Notions de base de Python
+  testing: Tests
+  unittest: \texttt{unittest}
 flavors:
   intro:
     - intro
     - /questions
+  quizz:
+    - quizz
+  warmup:
+    - warmup
+  advanced:
+    - generators
+    - /questions
+    - tp-generators
+    - decorators
+    - /questions
+    - tp-decorators
+    - metaclasses
+    - /questions
+    - tp-metaclasses
+    - context-managers
+    - /questions
+    - tp-context-managers
+  testing:
+    - testing: Principes généraux
+    - /questions
+    - unittest
+    - /questions
+    - pytest
+    - /questions
+    - tp-testing
+  collections:
+    - collections
+    - /questions
+    - tp-collections
+  performance:
+    - performance
+    - /questions
+    - tp-performance
+  linting:
+    - linting
+    - /questions
+    - tp-linting
+  production:
+    - environment
+    - /questions
+    - tp-environment
+    - packaging
+    - /questions
+    - tp-packaging
+    - deployment
+    - /questions
+    - tp-deployment
 title: Langage Python
 version: 3
