Add contact info
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/sparks-formation/python-avance/targets.yml
+++ b/sparks-formation/python-avance/targets.yml
@@ -32,5 +32,11 @@
   title: Jour 3
   sections:
     - path: python
+      flavor: performance
+      title: Performances
+
+    - path: python
       flavor: production
       title: Passage en production
+
+    - contact
